fix: ads visibiliti when not fill

--- a/src/components/search/cse.less
+++ b/src/components/search/cse.less
@@ -50,3 +50,11 @@ b {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     color: #4d90fe;
 }
+
+.adsbygoogle:empty {
+    display: none !important;
+}
+
+.adsbygoogle {
+    min-width: 150px;
+}
